Fix chart overflowing, add chart margins

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,4 @@
-nav,
+av,
 section,
 aside,
 footer,
@@ -101,12 +101,10 @@ header #average .value
     letter-spacing: -0.2em; }
 
 #chart
-  { width: 100%;
-    height: 100px;
-    display: block;
+  { display: block;
     position: absolute;
-    left: 0;
-    bottom: 5px; }
+    left: 0; bottom: 0;
+    overflow: hidden; }
 
 #development-badge {
   font-size: 10px;
